# etrobo_object_detection

./: AGENTS.md  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
etrobo_object_detection/: ObjectDetectionNode.py  etrobo_object_detection.py
src/: .etrobo_object_detection.cpp.swp  etrobo_object_detection.cpp  etrobo_object_detection_ncnn.cpp  etrobo_object_detection_onnx.cpp
